@@ -540,7 +540,7 @@ Enable delta module.
 Set number of samples for delta data smoothing calculation using exponential moving average (EMA) method. Value range in `1` to `100`. Higher value results more smoothness, but may lose accuracy. Default is `30` samples. Set to `1` to disable smoothing.
 
     laptime_pace_samples
-Set number of samples for average laptime pace calculation (EMA). Value range in `1` to `20`. Default is `6` samples. Set to `1` to disable averaging. Note, initial laptime pace is always based on player's all time personal best laptime if available. If a new laptime is faster than current laptime pace, it will replace current laptime pace without calculating average. Invalid lap, pit-in/out laps are always excluded from laptime pace calculation.
+Set number of samples for average laptime pace calculation (EMA). Value range in `1` to `20`. Default is `6` samples. Set `1` to disable averaging. Note, initial laptime pace is always based on player's all time personal best laptime if available. If a new laptime is faster than current laptime pace, it will replace current laptime pace without calculating average. Invalid lap, pit-in/out laps are always excluded from laptime pace calculation.
 
     laptime_pace_margin
 Set additional margin for current laptime that cannot exceed the sum of `laptime pace` and `margin`. This option is used to minimize the impact of unusually slow laptime. Default value is `5` seconds. Minimum value is limited to `0.1`.
@@ -1428,7 +1428,7 @@ Show empty lap time history. Default is `false`, which hides empty rows.
 **This widget displays lap number, driver overall position, position in class info.**
 
     show_lap_number
-Show your current lap number & max laps (if available).
+Show your current lap number (lap progression) & max laps if available.
 
     bkg_color_maxlap_warn
 Set warning color that shows 1 lap before exceeding max-lap in qualify (or indicates the last lap of a lap-type race).
@@ -1878,7 +1878,7 @@ Set detection range (in seconds) near (after) start/finish line to show color in
 Set detection range (in seconds) near (before) start/finish line to show color indicator when vehicle is within the range (or less). Default is `20` seconds. Default color is orange.
 
     leader_laptime_pace_samples
-Set number of samples for average laptime pace calculation (EMA). Value range in `1` to `20`. Default is `6` samples. Set to `1` to disable averaging. Note, initial laptime pace is always based on leader's session personal best laptime if available. If a new laptime is faster than current laptime pace, it will replace current laptime pace without calculating average. Invalid lap, pit-in/out laps are always excluded from laptime pace calculation.
+Set number of samples for average laptime pace calculation (EMA). Value range in `1` to `20`. Default is `6` samples. Set `1` to disable averaging. Note, initial laptime pace is always based on leader's session personal best laptime if available. If a new laptime is faster than current laptime pace, it will replace current laptime pace without calculating average. Invalid lap, pit-in/out laps are always excluded from laptime pace calculation.
 
     leader_laptime_pace_margin
 Set additional margin for current laptime that cannot exceed the sum of `laptime pace` and `margin`. This option is used to minimize the impact of unusually slow laptime. Default value is `5` seconds. Minimum value is limited to `0.1`.
@@ -2073,6 +2073,19 @@ Set the minimum stint time threshold in minutes for updating stint history. This
 
     position_max_range
 Set visualized maximum suspension position range (millimeter).
+
+
+## System performance
+**This widget displays system performance info.**
+
+    show_system_performance
+Show system's overall CPU utilization (percent) and memory usage (GB). Note, sampling interval is determined by `update_interval` setting.
+
+    show_tinypedal_performance
+Show TinyPedal's CPU utilization (percent) and memory usage (MB).
+
+    average_samples
+Set number of samples for average CPU utilization calculation using exponential moving average. Value range in `1` to `500`. Lower value may result more fluctuated reading. Set `1` to disable averaging.
 
 
 ## Timing
