@@ -1680,6 +1680,30 @@ WIDGET_DEFAULT = {
         "bkg_color": "#222222",
         "position_max_range": 100,
     },
+    "system_performance": {
+        "enable": True,
+        "update_interval": 500,
+        "position_x": 145,
+        "position_y": 710,
+        "opacity": 0.9,
+        "layout": 0,
+        "font_name": "Consolas",
+        "font_size": 15,
+        "font_weight": "bold",
+        "bar_padding": 0.2,
+        "bar_gap": 2,
+        "show_system_performance": True,
+        "font_color_system": "#FFFFFF",
+        "bkg_color_system": "#222222",
+        "show_tinypedal_performance": True,
+        "font_color_tinypedal": "#FFFFFF",
+        "bkg_color_tinypedal": "#222222",
+        "average_samples": 40,
+        "prefix_system": "OS ",
+        "prefix_tinypedal": "TP ",
+        "column_index_system": 1,
+        "column_index_tinypedal": 2,
+    },
     "timing": {
         "enable": True,
         "update_interval": 20,
